# raytracing-series-rs

./: .gitignore  README.md
gpu-tracing/: Cargo.toml
gpu-tracing/src/: algebra.rs  camera.rs  main.rs  render.rs  shaders.wgsl
nextweek/: Cargo.toml
nextweek/src/: aabb.rs  bvh.rs  camera.rs  cube.rs  hittable.rs  main.rs  material.rs  medium.rs  perlin.rs  ray.rs  rect.rs  rotate.rs  sphere.rs  texture.rs  translate.rs
rest_of_life/: Cargo.toml
rest_of_life/src/: aabb.rs  cube.rs  hittable.rs  main.rs  material.rs  onb.rs  pdf.rs  ray.rs  rect.rs  rotate.rs  sphere.rs  texture.rs  translate.rs
s10-dielectric/src/: camera.rs  hittable.rs  main.rs  vec3.rs
s12-defocus-blur/src/: camera.rs
s13-next/src/: lib.rs  main.rs
s3-vec3/src/: main.rs
s4-ray-camera-bg/: 4-ray-camera-bg.ppm
s5-rendering-sphere/: 5-rendering-sphere.ppm
s5-rendering-sphere/src/: main.rs
s7-antialiasing/src/: camera.rs  color.rs  main.rs
s8-diffuse-material/src/: hittable.rs  lib.rs  util.rs
s9-metal/src/: hittable.rs  lib.rs  main.rs  material.rs  vec3.rs
weekend/s11-positional-camera/src/: camera.rs  main.rs  material.rs
weekend/s12-defocus-blur/src/: main.rs
weekend/s13-next/src/: color.rs  sphere.rs  vec3.rs
weekend/s2-output-an-image/: Cargo.toml
weekend/s2-output-an-image/src/: main.rs
weekend/s4-ray-camera-bg/src/: main.rs
weekend/s6-1-surface-normals/src/: main.rs
weekend/s6-2-multiple-objects/src/: color.rs  main.rs  sphere.rs  vec3.rs
weekend/s8-diffuse-material/src/: color.rs  main.rs  vec3.rs
weekend/s9-metal/src/: camera.rs  hittable.rs  (+3 more)
