[package]
name = "gpu-tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
pollster = { version = "0.3", features = ["macro"] }
winit = "0.29.1"
wgpu = "0.19.1"
